added wrapper around light dark toggle for future screens

--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
   <main>
     <article class="start-menu">
       <div class="grid-content">
-        <div class="light-dark-toggle">
-          <div class="sun-container">
+        <div class="row-top">
+          <div class="curr-subject">
             <img src="">
+            <h2>some Subject</h2>
           </div>
-          <label class="light-dark-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round"></div>
-          </label>
-          <div class="moon-container">
-            <img src="">
+          <div class="light-dark-toggle">
+            <div class="sun-container">
+              <img src="">
+            </div>
+            <label class="light-dark-switch" for="checkbox">
+              <input type="checkbox" id="checkbox" />
+              <div class="slider round"></div>
+            </label>
+            <div class="moon-container">
+              <img src="">
+            </div>
           </div>
-
         </div>
         <h1>Welcome to the <span class="bolded">Frontend Quiz!</span></h1>
         <p>Pick a subject to get started.</p>
