remove row-top div from article start-menu

--- a/index.html
+++ b/index.html
@@ -20,53 +20,52 @@
   <!-- Quiz menu start -->
 
   <main>
-    <article class="start-menu">
-      <div class="grid-content">
-        <div class="row-top">
-          <div class="curr-subject">
-            <img src="">
-            <h2>some Subject</h2>
-          </div>
-          <div class="light-dark-toggle">
-            <div class="sun-container">
-              <img src="">
-            </div>
-            <label class="light-dark-switch" for="checkbox">
-              <input type="checkbox" id="checkbox" />
-              <div class="slider round"></div>
-            </label>
-            <div class="moon-container">
-              <img src="">
-            </div>
-          </div>
+    <article class="row-top">
+      <div class="curr-subject">
+        <img src="">
+        <h2>some Subject</h2>
+      </div>
+      <div class="light-dark-toggle">
+        <div class="sun-container">
+          <img src="">
         </div>
-        <h1>Welcome to the <span class="bolded">Frontend Quiz!</span></h1>
-        <p>Pick a subject to get started.</p>
+        <label class="light-dark-switch" for="checkbox">
+          <input type="checkbox" id="checkbox" />
+          <div class="slider round"></div>
+        </label>
+        <div class="moon-container">
+          <img src="">
+        </div>
+      </div>
+    </article>
 
-        <div class="choices">
-          <button class="button-html">
-            <div class="button-icon-container">
-              <img src="./assets/images/icon-html.svg">
-            </div>HTML
-          </button>
-          <button class="button-css">
-            <div class="button-icon-container">
-              <img src="./assets/images/icon-css.svg">
-            </div>CSS
-          </button>
-          <button class="button-js">
-            <div class="button-icon-container">
-              <img src="./assets/images/icon-js.svg">
-            </div>
-            JavaScript
-          </button>
-          <button class="button-accessibility">
-            <div class="button-icon-container">
-              <img src="./assets/images/icon-accessibility.svg">
-            </div>
-            Accessibility
-          </button>
-        </div>
+    <article class="start-menu">
+      <h1>Welcome to the <span class="bolded">Frontend Quiz!</span></h1>
+      <p>Pick a subject to get started.</p>
+
+      <div class="choices">
+        <button class="button-html">
+          <div class="button-icon-container">
+            <img src="./assets/images/icon-html.svg">
+          </div>HTML
+        </button>
+        <button class="button-css">
+          <div class="button-icon-container">
+            <img src="./assets/images/icon-css.svg">
+          </div>CSS
+        </button>
+        <button class="button-js">
+          <div class="button-icon-container">
+            <img src="./assets/images/icon-js.svg">
+          </div>
+          JavaScript
+        </button>
+        <button class="button-accessibility">
+          <div class="button-icon-container">
+            <img src="./assets/images/icon-accessibility.svg">
+          </div>
+          Accessibility
+        </button>
       </div>
     </article>
 
