added buttons to question screen

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     <!-- Quiz question start -->
 
     <article class="question-screen">
-      Question <!-- number --> of 10
+      <p>Question <!-- number --> of 10</p>
 
-      A
-      B
-      C
-      D
+      <button>A</button>
+      <button>B</button>
+      <button>C</button>
+      <button>D</button>
 
-      Submit answer
+      <button>Submit answer</button>
     </article>
 
     <!-- Quiz question end -->
