fixed syntax error preventing js quiz from loading

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="./assets/images/icon-css.svg">
           </div>CSS
         </button>
-        <button id="Javascript" class="quiz-type">
+        <button id="JavaScript" class="quiz-type">
           <div class="button-icon-container">
             <img src="./assets/images/icon-js.svg">
           </div>
