fetch question, choices, populate fields

--- a/index.html
+++ b/index.html
@@ -78,13 +78,23 @@
     <article class="question-screen">
       <p>Question <span class="question-number"><!-- number --></span> of 10</p>
 
-      <div class="choices">
-        <button>A</button>
-        <button>B</button>
-        <button>C</button>
-        <button>D</button>
+      <h2 class="question">Placeholder</h2>
 
-        <button>Submit answer</button>
+      <div class="choices options">
+        <button class="option">
+          <div class="option-box">A</div>
+        </button>
+        <button class="option">
+          <div class="option-box">B</div>
+        </button>
+        <button class="option">
+          <div class="option-box">C</div>
+        </button>
+        <button class="option">
+          <div class="option-box">D</div>
+        </button>
+
+        <button class="submit-answer">Submit answer</button>
       </div>
     </article>
 
