add styling for selected option

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
       <h2 class="question">Placeholder</h2>
 
       <div class="choices options">
-        <button class="option">
+        <button id="A" class="option">
           <div class="option-box">A</div>
         </button>
-        <button class="option">
+        <button id="B" class="option">
           <div class="option-box">B</div>
         </button>
-        <button class="option">
+        <button id="C" class="option">
           <div class="option-box">C</div>
         </button>
-        <button class="option">
+        <button id="D" class="option">
           <div class="option-box">D</div>
         </button>
 
