added select an answer prompt

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         </button>
 
         <button class="submit-answer">Submit answer</button>
+        <div class="select-prompt">
+          <img src="./assets/images/icon-error.svg">
+          <p class="select-prompt-text">Please select an answer</p>
+        </div>
       </div>
     </article>
 
