added a few media queries

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <!-- Quiz menu start -->
 
     <article class="start-menu">
-      <h1>Welcome to the <span class="bolded">Frontend Quiz!</span></h1>
-      <p>Pick a subject to get started.</p>
+      <div class="left-content">
+        <h1>Welcome to the <span class="bolded">Frontend Quiz!</span></h1>
+        <p>Pick a subject to get started.</p>
+      </div>
 
       <div class="choices">
         <button id="HTML" class="quiz-type">
@@ -76,10 +78,10 @@
     <!-- Quiz question start -->
 
     <article class="question-screen">
-      <p>Question <span class="question-number"><!-- number --></span> of 10</p>
-
-      <h2 class="question">Placeholder</h2>
-
+      <div class="left-content">
+        <p>Question <span class="question-number"><!-- number --></span> of 10</p>
+        <h2 class="question">Placeholder</h2>
+      </div>
       <div class="choices options">
         <button id="A" class="option">
           <div class="option-box">A</div>
