added and styled non-working progress bar

--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
 
     <article class="question-screen">
       <div class="left-content">
-        <p>Question <span class="question-number"><!-- number --></span> of 10</p>
+        <p class="question-count">Question <span class="question-number"><!-- number --></span> of 10</p>
         <h2 class="question">Placeholder</h2>
+        <div class="progress-bar whole">
+          <div class="progress-bar done">
+
+          </div>
+        </div>
       </div>
       <div class="choices options">
         <button id="A" class="option">
