turn total question# into a span
js now fills it based on how many questions are in the json file for that quiz type

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
     <article class="question-screen">
       <div class="left-content">
-        <p class="question-count">Question <span class="question-number"><!-- number --></span> of 10</p>
+        <p class="question-count">Question <span class="question-number"><!-- number --></span> of <span
+            class="question-total"><!-- total --></span></p>
         <h2 class="question">Placeholder</h2>
         <div class="progress-bar whole">
           <div class="progress-bar done">
