--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
       </div>
 
       <div class="complete-right">
-        <span class="final-score"><!-- score --></span> out of <span class="complete-question-total">totalQ</span>
+        <div class="score-container">
+          <span class="final-score"><!-- score --></span> out of <span class="complete-question-total">totalQ</span>
+        </div>
+        <button class="restart">Play Again</button>
       </div>
 
     </article>
