Add subject bar to final page
Refactored setting of subject bars into a function

--- a/index.html
+++ b/index.html
@@ -125,7 +125,15 @@
 
       <div class="complete-right">
         <div class="score-container">
-          <span class="final-score"><!-- score --></span> out of <span class="complete-question-total">totalQ</span>
+          <div class="final curr-subject">
+            <div class="button-icon-container">
+              <img class="subject-img" src="./assets/images/icon-css.svg">
+            </div>
+            <!-- <img class="subject-img" src=""> -->
+            <h2 class="subject-chosen">some Subject</h2>
+          </div>
+          <h1 class="final-score"><!-- score --></h1>
+          <p>out of <span class="complete-question-total">totalQ</span></p>
         </div>
         <button class="restart">Play Again</button>
       </div>
