--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h2 class="subject-chosen">some Subject</h2>
           </div>
           <h1 class="final-score"><!-- score --></h1>
-          <p>out of <span class="complete-question-total">totalQ</span></p>
+          <p class="score-out-of">out of <span class="complete-question-total">totalQ</span></p>
         </div>
         <button class="restart">Play Again</button>
       </div>
