add alt tags to imgs

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <article class="row-top">
       <div class="curr-subject">
         <div class="button-icon-container">
-          <img class="subject-img" src="./assets/images/icon-css.svg">
+          <img class="subject-img" src="./assets/images/icon-css.svg" alt="subject icon">
         </div>
         <!-- <img class="subject-img" src=""> -->
         <h2 class="subject-chosen">some Subject</h2>
       </div>
       <div class="light-dark-toggle">
         <div class="sun-container">
-          <img src="">
+          <img src="" alt="picture of sun">
         </div>
         <label class="light-dark-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
           <div class="slider round"></div>
         </label>
         <div class="moon-container">
-          <img src="">
+          <img src="" alt="picture of moon">
         </div>
       </div>
     </article>
@@ -50,23 +50,23 @@
       <div class="choices">
         <button id="HTML" class="quiz-type">
           <div class="button-icon-container">
-            <img src="./assets/images/icon-html.svg">
+            <img src="./assets/images/icon-html.svg" alt="html icon">
           </div>HTML
         </button>
         <button id="CSS" class="quiz-type">
           <div class="button-icon-container">
-            <img src="./assets/images/icon-css.svg">
+            <img src="./assets/images/icon-css.svg" alt="css icon">
           </div>CSS
         </button>
         <button id="JavaScript" class="quiz-type">
           <div class="button-icon-container">
-            <img src="./assets/images/icon-js.svg">
+            <img src="./assets/images/icon-js.svg" alt="javascript icon">
           </div>
           JavaScript
         </button>
         <button id="Accessibility" class="quiz-type">
           <div class=" button-icon-container">
-            <img src="./assets/images/icon-accessibility.svg">
+            <img src="./assets/images/icon-accessibility.svg" alt="Accessibility icon">
           </div>
           Accessibility
         </button>
@@ -106,7 +106,7 @@
 
         <button class="submit-answer">Submit answer</button>
         <div class="select-prompt">
-          <img src="./assets/images/icon-error.svg">
+          <img src="./assets/images/icon-error.svg" alt="error icon">
           <p class="select-prompt-text">Please select an answer</p>
         </div>
       </div>
@@ -127,7 +127,7 @@
         <div class="score-container">
           <div class="final curr-subject">
             <div class="button-icon-container">
-              <img class="subject-img" src="./assets/images/icon-css.svg">
+              <img class="subject-img" src="./assets/images/icon-css.svg" alt="subject icon">
             </div>
             <!-- <img class="subject-img" src=""> -->
             <h2 class="subject-chosen">some Subject</h2>
